fix styles on safari

--- a/components/Input/input.module.css
+++ b/components/Input/input.module.css
@@ -9,6 +9,7 @@
 
 .input:focus {
   outline-style: dotted;
+  outline-width: 1px;
   outline-color: var(--outline-color);
 }
 
