--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,8 +1,9 @@
 @import "./variables.css";
+/* Styles reset */
 html, body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
 
 a {
@@ -13,8 +14,6 @@ a {
 * {
   box-sizing: border-box;
 }
-
-/* Styles reset */
 
 button {
   border: none;
@@ -46,14 +45,19 @@ input {
 /* Change Autocomplete styles in Chrome */
 
 input:-webkit-autofill, input:-webkit-autofill:hover, input:-webkit-autofill:focus, textarea:-webkit-autofill, textarea:-webkit-autofill:hover, textarea:-webkit-autofill:focus, select:-webkit-autofill, select:-webkit-autofill:hover, select:-webkit-autofill:focus {
-  border:0;
+  border: 0;
   box-shadow: none;
   transition: background-color 5000s ease-in-out 0s;
   caret-color: var(--text-color);
   -webkit-text-fill-color: var(--text-color);
 }
 
+::-webkit-input-placeholder, ::placeholder {
+  color: var(--text-color);
+}
+
 /* Helper class to hide items but keep them accessible for screenreaders */
+
 .sr-only {
   position: absolute;
   left: -10000px;
